# dbt-on-cloud-run

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild_build.yaml  cloudbuild_create.yaml  pyproject.toml
cloudrun/: execute_cloud_run_job.py  requirements.txt
dbt/: profiles.yml
